<!--
Anthony Mancia (N01643670) OCB
Chris Garcia(N01371506) 0CA
Ngoc Le (N01643011) 0CA
Tyler Meira (N01432291) 0CA
-->
<resources>
    <string name="app_name" translatable="false">SiteSync</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jobs">Jobs</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="exit_application">Exit Application</string>
    <string name="exitMsgMain">Are you sure you want to exit?</string>
    <string name="YesButton">Yes</string>
    <string name="NoButton">No</string>
    <string name="login_title">Welcome to SiteSync</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="try_again">Try Again</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_granted">Permission granted</string>
    <string name="dismiss">Dismiss</string>
    <string name="settings">Settings</string>
    <string name="profile_name">Profile Name</string>
    <string name="active_jobs">Active Jobs</string>
    <string name="Home">Home\n</string>
    <string name="Profile">Profile</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="register_title">Register Screen</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="register">Register</string>
    <string name="first_name">Enter your first name</string>
    <string name="last_name">Enter your last name</string>
    <string name="register_guide">New user? Register below:</string>
    <string name="register_with_new_account_button">Register with new account</string>
    <string name="address_hint">Enter your address</string>
    <string name="organization_hint">Enter your organization</string>
    <string name="phone_hint">Enter your phone number</string>
    <string name="employer">Employer</string>
    <string name="not_employer">Not Employer</string>
    <string name="help">Help</string>
    <string name="my_jobs">My Jobs</string>
    <string name="password_change">Password Change</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="job_board">Job Board</string>
    <string name="jobs_available">Jobs Available</string>
    <string name="deck_replacement">Deck Replacement</string>
    <string name="basement_reno">Basement Reno</string>
    <string name="availble">Availble</string>
    <string name="available">Available</string>
    <string name="past_jobs">Past Jobs</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="default_web_client_id">946709470583-kak1kk6l238nggf027ua4l6fv50js23h.apps.googleusercontent.com</string>
    <string name="notes">Notes</string>
    <string name="contacts">Contacts</string>
    <string name="remember_me">Remember me?</string>
    <string name="feedback">Feedback</string>
    <string name="settings_drawer_menu">Settings</string>
    <string name="name">Name</string>
    <string name="your_feedback">Your feedback</string>
    <string name="submit_button_feedback">Submit</string>
    <string name="feedback_screen">Feedback Screen</string>
</resources>